add to calendar

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<h1>Justin &amp; Emily</h1>
 							<h2>Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en.gif"></a></p>
+							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br><i>Google Calendar</i></a></p>
 						</div>
 					</div>
 				</div>
