Picture and Detail update

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 			
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>We Offer Services</h2>
+					<h2>Section Title</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
@@ -469,7 +469,7 @@
 							<i class="icon-calendar"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>We Organized Events</h3>
+							<h3>Subtitle 1</h3>
 							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
@@ -479,7 +479,7 @@
 							<i class="icon-image"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Photoshoot</h3>
+							<h3>Subtitle 2</h3>
 							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
@@ -489,7 +489,7 @@
 							<i class="icon-video"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Video Editing</h3>
+							<h3>Subtitle 3</h3>
 							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 						</div>
 					</div>
