--- a/index.html
+++ b/index.html
@@ -99,10 +99,28 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Justin &amp; Emily</h1>
+							<h1>Emily &amp; Justin</h1>
 							<h2>Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br><i>Google Calendar</i></a></p>
+							<div id="clockdiv">
+							  <div>
+								<span class="days"></span>
+								<div class="smalltext">Days</div>
+							  </div>
+							  <div>
+								<span class="hours"></span>
+								<div class="smalltext">Hours</div>
+							  </div>
+							  <div>
+								<span class="minutes"></span>
+								<div class="smalltext">Minutes</div>
+							  </div>
+							  <div>
+								<span class="seconds"></span>
+								<div class="smalltext">Seconds</div>
+							  </div>
+							</div>
+							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br></p><p size="8px">><i>Google Calendar</i></a></p>
 						</div>
 					</div>
 				</div>
