--- a/index.html
+++ b/index.html
@@ -102,25 +102,7 @@
 							<h1>Emily &amp; Justin</h1>
 							<h2>Are Getting Married</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<div id="clockdiv">
-							  <div>
-								<span class="days"></span>
-								<div class="smalltext">Days</div>
-							  </div>
-							  <div>
-								<span class="hours"></span>
-								<div class="smalltext">Hours</div>
-							  </div>
-							  <div>
-								<span class="minutes"></span>
-								<div class="smalltext">Minutes</div>
-							  </div>
-							  <div>
-								<span class="seconds"></span>
-								<div class="smalltext">Seconds</div>
-							  </div>
-							</div>
-							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br></p><p size="8px">><i>Google Calendar</i></a></p>
+							<p><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MGxoZWRwbjlrNWJ1ZWVwdGxiYmI0dTFxNmkgaGViZWxzakBt&amp;tmsrc=hebelsj%40gmail.com" class="btn btn-default btn-sm">Save the date</br><i size="8px">Google Calendar</i></a></p>
 						</div>
 					</div>
 				</div>
