--- a/groom-bride.html
+++ b/groom-bride.html
@@ -7,25 +7,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Nuptial &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Emily  & Justin Wedding</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -78,7 +64,7 @@
 						<div class="container">
 							<div class="col-md-10 col-md-offset-1">
 								<div class="animate-box">
-									<h1>Nuptial</h1>
+									<h1>The Wedding</h1>
 									<h2>Groom &amp; Bride</h2>
 								</div>
 							</div>
@@ -92,19 +78,19 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Nuptial</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">The Wedding</a></h1>
 					<!-- START #fh5co-menu-wrap -->
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="index.html" >Home</a></li>
 							<li class="active">
 								<a href="groom-bride.html" class="fh5co-sub-ddown">Groom &amp; Bride</a>
-								<ul class="fh5co-sub-menu">
+								<!-- <ul class="fh5co-sub-menu">
 									<li><a href="#">Dropdown Menu 1</a></li>
 									<li><a href="#">Dropdown Menu 2</a></li>
 									<li><a href="#">Dropdown Menu 3</a></li>
 									<li><a href="#">Dropdown Menu 4</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="when-where.html">When &amp; Where</a></li>
 							<li><a href="guest.html">Guest</a></li>
@@ -133,7 +119,7 @@
 						</div>
 						<div class="col-md-6 nopadding animate-box">
 							<div class="couple-desc">
-								<h3>Jack Wood</h3>
+								<h3>Justin Hebels</h3>
 								<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 								<p class="fh5co-social-icons">
 									<a href="#"><i class="icon-twitter2"></i></a>
@@ -153,7 +139,7 @@
 						</div>
 						<div class="col-md-6 col-md-pull-6 nopadding animate-box">
 							<div class="couple-desc">
-								<h3>Rose Thomas</h3>
+								<h3>Emily Higgins</h3>
 								<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius. Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 								<p class="fh5co-social-icons">
 									<a href="#"><i class="icon-twitter2"></i></a>
@@ -226,7 +212,19 @@
 			</div>
 		</footer>
 
-	
+	  <!-- 
+	//////////////////////////////////////////////////////
+
+	FREE HTML5 TEMPLATE 
+	DESIGNED & DEVELOPED by FREEHTML5.CO
+		
+	Website: 		http://freehtml5.co/
+	Email: 			info@freehtml5.co
+	Twitter: 		http://twitter.com/fh5co
+	Facebook: 		https://www.facebook.com/fh5co
+
+	//////////////////////////////////////////////////////
+	 -->
 
 	</div>
 	<!-- END fh5co-page -->
