--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 			</div>
 		</div>
 
-		<header id="fh5co-header-section" class="sticky-banner">
+		<!-- <header id="fh5co-header-section" class="sticky-banner">
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
 					<h1 id="fh5co-logo"><a href="index.html">We are getting MARRIED!</a></h1>
 					<!-- START #fh5co-menu-wrap -->
-					<nav id="fh5co-menu-wrap" role="navigation">
+					<!-- <nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li class="active"><a href="index.html" >Home</a></li>
 							<li>
@@ -101,7 +101,7 @@
 					</nav>
 				</div>
 			</div>
-		</header>
+		</header> -->
 
 		<!-- end:header-top -->
 		
